--- a/frontend/src/app/components/navbar/navbar.component.css
+++ b/frontend/src/app/components/navbar/navbar.component.css
@@ -45,7 +45,7 @@ li {
   cursor: pointer;
   user-select: none;
   white-space: nowrap;
-  border-bottom: 3px solid white;
+  border-bottom: 3px solid transparent;
 }
 
 li:hover {
