--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -93,7 +93,7 @@
         [header]="scenario.label"
         [status]="scenario.meta_recentRunStatus"
         [viewports]="[]"
-        [imageUrl]="'https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/27d32389267827.5df0b971656d7.png'"
+        [imageUrl]="scenario.meta_referenceImageUrl"
         (clickCard)="openScenarioHandler(scenario._id)"
         (clickHistory)="openScenarioHistoryHandler(scenario._id)"
         (clickRun)="runScenarioHandler(scenario.label)"
@@ -115,7 +115,10 @@
 
           <div class="status-cell">
 
-            <div class="status-icon status-icon--passed">
+            <div class="status-icon" [ngClass]="{
+              'status-icon--passed': job.state === 'Passed',
+              'status-icon--failed': job.state === 'Failed'
+            }">
               <app-icon [icon]="job.state"></app-icon>
             </div>
 
