--- a/frontend/src/app/view/scenario-page/scenario-page.component.html
+++ b/frontend/src/app/view/scenario-page/scenario-page.component.html
@@ -1,29 +1,33 @@
 <app-sidebar-page-layout
-  [title]="'Edit: ' + (title$ | async)"
+  [title]="!routeData.createMode ? 'Edit: ' + (title$ | async) : 'Create New Scenario'"
   [description]="'Each scenario will test one page, component or action against one or many viewport sizes'"
   [breadcrumb]="true"
+  [hideSidebar]="routeData.createMode"
 >
 
   <div class="breadcrumb-placeholder">
     <span class="breadcrumb-item breadcrumb-item--link" [routerLink]="['/scenarios']">Scenarios</span>
-    <span class="breadcrumb-item">{{ title$ | async }}</span>
+    <span *ngIf="title$ | async" class="breadcrumb-item">{{ title$ | async }}</span>
   </div>
 
 
   <div class="page-actions-placeholder">
 
     <ul class="page-actions">
-      <li class="title-actions-item">
+      <li *ngIf="!routeData.createMode" class="title-actions-item">
         <button class="button button--white" (click)="cloneHandler()">Clone</button>
       </li>
-      <li class="title-actions-item">
+      <li *ngIf="!routeData.createMode" class="title-actions-item">
         <button class="button button--white" (click)="deleteHandler()">Delete</button>
       </li>
-      <li class="title-actions-item">
+      <li *ngIf="!routeData.createMode" class="title-actions-item">
         <button class="button button--white" (click)="runHandler()">Run Scenario</button>
       </li>
-      <li class="title-actions-item">
+      <li *ngIf="!routeData.createMode" class="title-actions-item">
         <button class="button button--dark" (click)="saveHandler()">Save</button>
+      </li>
+      <li *ngIf="routeData.createMode" class="title-actions-item">
+        <button class="button button--dark" (click)="createHandler()">Create Scenario</button>
       </li>
     </ul>
 
