--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -1024,6 +1024,7 @@ app-data-action-button:first-child {
 .info-table .label-cell {
   font-weight: bold;
   padding-right: 20px;
+  white-space: nowrap;
 }
 .info-table .value-cell { font-weight: 400;}
 .info-table .value-cell .chips {
