--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -134,7 +134,7 @@
 
         </td>
         <td>
-          {{ job.scenarios }}
+          <app-more [values]="job.scenarios"></app-more>
         </td>
         <td>
 
