--- a/frontend/src/app/components/history-table/history-table.component.html
+++ b/frontend/src/app/components/history-table/history-table.component.html
@@ -4,7 +4,7 @@
     style="width: 100%; _height: 500px;"
     class="ag-theme-alpine"
     headerHeight="0"
-    [domLayout]="autoHeight"
+    [domLayout]="'autoHeight'"
     [rowHeight]="68"
     [rowData]="jobs$ | async"
     [columnDefs]="columnDefs"
